--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       auma({
         id: "demo-decision-tree",
         theme: {
-          logoUrl: "./image/logo.png",
+          logoUrl: "./image/auma.png",
           buttonYesBgColor: "#3D85C6",
           buttonYesFgColor: "#3D85C6",
           buttonNoBgColor: "#15D798",
@@ -20,21 +20,70 @@
         questions: [
           {
             id: "1",
-            audioUrl: "./audio/1.mp3",
+            audioUrl: "./audio/Audio-1-slide-1-e-2.mp3",
             imageUrl: "./image/1.jpg",
             onYes: "question:3",
             onNo: "question:2",
           },
           {
             id: "2",
-            audioUrl: "./audio/2.mp3",
+            audioUrl: "./audio/Audio-2-slide-3.mp3",
             imageUrl: "./image/2.jpg",
             onYes: "result:outro",
             onNo: "result:outro",
           },
           {
             id: "3",
-            audioUrl: "./audio/3.mp3",
+            audioUrl: "./audio/Audio-3-slide-4.mp3",
+            imageUrl: "./image/3.jpg",
+            onYes: "result:outro",
+            onNo: "result:outro",
+          },
+          {
+            id: "4",
+            audioUrl: "./audio/Audio-4-slide-5.mp3",
+            imageUrl: "./image/3.jpg",
+            onYes: "result:outro",
+            onNo: "result:outro",
+          },
+          {
+            id: "5",
+            audioUrl: "./audio/Audio-5-slide-6.mp3",
+            imageUrl: "./image/3.jpg",
+            onYes: "result:outro",
+            onNo: "result:outro",
+          },
+          {
+            id: "6",
+            audioUrl: "./audio/Audio-6-slide-7.mp3",
+            imageUrl: "./image/3.jpg",
+            onYes: "result:outro",
+            onNo: "result:outro",
+          },
+          {
+            id: "7",
+            audioUrl: "./audio/Audio-7-slide-8.mp3",
+            imageUrl: "./image/3.jpg",
+            onYes: "result:outro",
+            onNo: "result:outro",
+          },
+          {
+            id: "8",
+            audioUrl: "./audio/Audio-8-slide-9.mp3",
+            imageUrl: "./image/3.jpg",
+            onYes: "result:outro",
+            onNo: "result:outro",
+          },
+          {
+            id: "9",
+            audioUrl: "./audio/Audio-9-slide-10.mp3",
+            imageUrl: "./image/3.jpg",
+            onYes: "result:outro",
+            onNo: "result:outro",
+          },
+          {
+            id: "9",
+            audioUrl: "./audio/Audio-10-slide-11.mp3",
             imageUrl: "./image/3.jpg",
             onYes: "result:outro",
             onNo: "result:outro",
