Adding styles to Index file

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="https://unpkg.com/@oseq/auma/dist/auma-decision-tree.js"></script>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <script>
@@ -9,10 +10,10 @@
         id: "demo-decision-tree",
         theme: {
           logoUrl: "./image/auma.png",
-          buttonYesBgColor: "#3D85C6",
-          buttonYesFgColor: "#3D85C6",
-          buttonNoBgColor: "#15D798",
-          buttonNoFgColor: "#15D798",
+          buttonYesBgColor: "#b63082",
+          buttonYesFgColor: "#ffffff",
+          buttonNoBgColor: "#a554b7",
+          buttonNoFgColor: "#ffffff",
         },
         welcome: {
           audioUrl: "./audio/intro.mp3",
