--- a/index.html
+++ b/index.html
@@ -30,70 +30,70 @@
             id: "2",
             audioUrl: "./audio/Audio-2-slide-3.mp3",
             imageUrl: "./image/2.jpg",
-            onYes: "result:outro",
-            onNo: "result:outro",
+            onYes: "question:4",
+            onNo: "question:3",
           },
           {
             id: "3",
             audioUrl: "./audio/Audio-3-slide-4.mp3",
             imageUrl: "./image/3.jpg",
-            onYes: "result:outro",
-            onNo: "result:outro",
+            onYes: "question:6",
+            onNo: "question:5",
           },
           {
             id: "4",
             audioUrl: "./audio/Audio-4-slide-5.mp3",
             imageUrl: "./image/3.jpg",
-            onYes: "result:outro",
-            onNo: "result:outro",
+            onYes: "question:8",
+            onNo: "question:7",
           },
           {
             id: "5",
             audioUrl: "./audio/Audio-5-slide-6.mp3",
             imageUrl: "./image/3.jpg",
-            onYes: "result:outro",
-            onNo: "result:outro",
+            onYes: "result:10",
+            onNo: "result:9",
           },
           {
             id: "6",
             audioUrl: "./audio/Audio-6-slide-7.mp3",
             imageUrl: "./image/3.jpg",
-            onYes: "result:outro",
-            onNo: "result:outro",
+            onYes: "result:10",
+            onNo: "result:10",
           },
           {
             id: "7",
             audioUrl: "./audio/Audio-7-slide-8.mp3",
             imageUrl: "./image/3.jpg",
-            onYes: "result:outro",
-            onNo: "result:outro",
+            onYes: "result:10",
+            onNo: "result:10",
           },
           {
             id: "8",
             audioUrl: "./audio/Audio-8-slide-9.mp3",
             imageUrl: "./image/3.jpg",
-            onYes: "result:outro",
-            onNo: "result:outro",
+            onYes: "result:10",
+            onNo: "result:10",
           },
           {
             id: "9",
             audioUrl: "./audio/Audio-9-slide-10.mp3",
             imageUrl: "./image/3.jpg",
-            onYes: "result:outro",
-            onNo: "result:outro",
+            onYes: "result:10",
+            onNo: "result:10",
           },
           {
             id: "9",
             audioUrl: "./audio/Audio-10-slide-11.mp3",
             imageUrl: "./image/3.jpg",
-            onYes: "result:outro",
-            onNo: "result:outro",
+            onYes: "result:10",
+            onNo: "result:10",
           },
         ],
         results: [
           {
-            id: "outro",
-            audioUrl: "./audio/outro.mp3",
+            id: "10",
+            audioUrl: "./audio/Audio-10-slide-11.mp3",
             imageUrl: "./image/outro.jpg",
           },
         ],
