Resized images in photoshop and replaced them in dawh

--- a/index.html
+++ b/index.html
@@ -22,70 +22,70 @@
           {
             id: "1",
             audioUrl: "./audio/Audio-1-slide-1-e-2.mp3",
-            imageUrl: "./image/1.jpg",
+            imageUrl: "./image/img1.png",
             onYes: "question:3",
             onNo: "question:2",
           },
           {
             id: "2",
             audioUrl: "./audio/Audio-2-slide-3.mp3",
-            imageUrl: "./image/2.jpg",
+            imageUrl: "./image/img2.png",
             onYes: "question:4",
             onNo: "question:3",
           },
           {
             id: "3",
             audioUrl: "./audio/Audio-3-slide-4.mp3",
-            imageUrl: "./image/3.jpg",
+            imageUrl: "./image/img3.png",
             onYes: "question:6",
             onNo: "question:5",
           },
           {
             id: "4",
             audioUrl: "./audio/Audio-4-slide-5.mp3",
-            imageUrl: "./image/3.jpg",
+            imageUrl: "./image/img4.png",
             onYes: "question:8",
             onNo: "question:7",
           },
           {
             id: "5",
             audioUrl: "./audio/Audio-5-slide-6.mp3",
-            imageUrl: "./image/3.jpg",
+            imageUrl: "./image/img5.png",
             onYes: "result:10",
             onNo: "result:9",
           },
           {
             id: "6",
             audioUrl: "./audio/Audio-6-slide-7.mp3",
-            imageUrl: "./image/3.jpg",
+            imageUrl: "./image/img6.png",
             onYes: "result:10",
             onNo: "result:10",
           },
           {
             id: "7",
             audioUrl: "./audio/Audio-7-slide-8.mp3",
-            imageUrl: "./image/3.jpg",
+            imageUrl: "./image/img7.png",
             onYes: "result:10",
             onNo: "result:10",
           },
           {
             id: "8",
             audioUrl: "./audio/Audio-8-slide-9.mp3",
-            imageUrl: "./image/3.jpg",
+            imageUrl: "./image/img8.png",
             onYes: "result:10",
             onNo: "result:10",
           },
           {
             id: "9",
             audioUrl: "./audio/Audio-9-slide-10.mp3",
-            imageUrl: "./image/3.jpg",
+            imageUrl: "./image/img9.png",
             onYes: "result:10",
             onNo: "result:10",
           },
           {
             id: "9",
             audioUrl: "./audio/Audio-10-slide-11.mp3",
-            imageUrl: "./image/3.jpg",
+            imageUrl: "./image/img1.png",
             onYes: "result:10",
             onNo: "result:10",
           },
