--- a/index.html
+++ b/index.html
@@ -51,43 +51,43 @@
             id: "5",
             audioUrl: "./audio/Audio-5-slide-6.mp3",
             imageUrl: "./image/img5.png",
-            onYes: "result:8",
-            onNo: "result:7",
+            onYes: "question:8",
+            onNo: "question:7",
           },
           {
             id: "6",
             audioUrl: "./audio/Audio-6-slide-7.mp3",
             imageUrl: "./image/img6.png",
-            onYes: "result:8",
-            onNo: "result:7",
+            onYes: "question:8",
+            onNo: "question:7",
           },
           {
             id: "7",
             audioUrl: "./audio/Audio-7-slide-8.mp3",
             imageUrl: "./image/img7.png",
-            onYes: "result:8",
-            onNo: "result:6",
+            onYes: "question:8",
+            onNo: "question:6",
           },
           {
             id: "8",
             audioUrl: "./audio/Audio-8-slide-9.mp3",
             imageUrl: "./image/img8.png",
-            onYes: "result:9",
-            onNo: "result:6",
+            onYes: "question:9",
+            onNo: "question:6",
           },
           {
             id: "9",
             audioUrl: "./audio/Audio-9-slide-10.mp3",
             imageUrl: "./image/img9.png",
-            onYes: "result:8",
+            onYes: "question:8",
             onNo: "result:10",
           },
           {
             id: "10",
             audioUrl: "./audio/Audio-10-slide-11.mp3",
             imageUrl: "./image/img1.png",
-            onYes: "result:8",
-            onNo: "result:7",
+            onYes: "question:8",
+            onNo: "question:7",
           },
         ],
         results: [
