Overidden styles and changed images from png to jpg

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       auma({
         id: "demo-decision-tree",
         theme: {
-          logoUrl: "./image/auma.png",
+          logoUrl: "./image/logo.png",
           buttonYesBgColor: "#b63082",
           buttonYesFgColor: "#ffffff",
           buttonNoBgColor: "#a554b7",
@@ -22,70 +22,70 @@
           {
             id: "1",
             audioUrl: "./audio/Audio-1-slide-1-e-2.mp3",
-            imageUrl: "./image/img1.png",
+            imageUrl: "./image/img1.jpg",
             onYes: "question:3",
             onNo: "question:2",
           },
           {
             id: "2",
             audioUrl: "./audio/Audio-2-slide-3.mp3",
-            imageUrl: "./image/img2.png",
+            imageUrl: "./image/img2.jpg",
             onYes: "question:8",
             onNo: "question:3",
           },
           {
             id: "3",
             audioUrl: "./audio/Audio-3-slide-4.mp3",
-            imageUrl: "./image/img3.png",
+            imageUrl: "./image/img3.jpg",
             onYes: "question:5",
             onNo: "question:6",
           },
           {
             id: "4",
             audioUrl: "./audio/Audio-4-slide-5.mp3",
-            imageUrl: "./image/img4.png",
+            imageUrl: "./image/img4.jpg",
             onYes: "question:6",
             onNo: "question:5",
           },
           {
             id: "5",
             audioUrl: "./audio/Audio-5-slide-6.mp3",
-            imageUrl: "./image/img5.png",
+            imageUrl: "./image/img5.jpg",
             onYes: "question:8",
             onNo: "question:7",
           },
           {
             id: "6",
             audioUrl: "./audio/Audio-6-slide-7.mp3",
-            imageUrl: "./image/img6.png",
+            imageUrl: "./image/img6.jpg",
             onYes: "question:8",
             onNo: "question:7",
           },
           {
             id: "7",
             audioUrl: "./audio/Audio-7-slide-8.mp3",
-            imageUrl: "./image/img7.png",
+            imageUrl: "./image/img7.jpg",
             onYes: "question:8",
             onNo: "question:6",
           },
           {
             id: "8",
             audioUrl: "./audio/Audio-8-slide-9.mp3",
-            imageUrl: "./image/img8.png",
+            imageUrl: "./image/img8.jpg",
             onYes: "question:9",
             onNo: "question:6",
           },
           {
             id: "9",
             audioUrl: "./audio/Audio-9-slide-10.mp3",
-            imageUrl: "./image/img9.png",
+            imageUrl: "./image/img9.jpg",
             onYes: "question:8",
             onNo: "result:10",
           },
           {
             id: "10",
             audioUrl: "./audio/Audio-10-slide-11.mp3",
-            imageUrl: "./image/img1.png",
+            imageUrl: "./image/img1.jpg",
             onYes: "question:8",
             onNo: "question:7",
           },
