Modified Button colors, Logo, and Audio 4

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       auma({
         id: "demo-decision-tree",
         theme: {
-          logoUrl: "./image/logo.png",
-          buttonYesBgColor: "#b63082",
+          logoUrl: "./image/Brazil-Logo.png",
+          buttonYesBgColor: "#6699cc",
           buttonYesFgColor: "#ffffff",
-          buttonNoBgColor: "#a554b7",
+          buttonNoBgColor: "#77dd77",
           buttonNoFgColor: "#ffffff",
         },
         welcome: {
