Modified Button colors, Logo, and Audio 4

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             audioUrl: "./audio/Audio-9-slide-10.mp3",
             imageUrl: "./image/img9.jpg",
             onYes: "question:8",
-            onNo: "result:10",
+            onNo: "question:10",
           },
           {
             id: "10",
