--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <script src="https://unpkg.com/@oseq/auma/dist/auma-decision-tree.js"></script>
     <link rel="stylesheet" href="./css/styles.css">
   </head>
